# flex-bison

./: todo.txt
calc/: Makefile  calc.y  lexer.l
simple/: Makefile  lexer.l  meson.build  parser.y
utf8/: Makefile  lexer.l  parser.y
